2004-04-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/book.cc (to_stencil): New method.

	* lily/parser.yy (markup): Use it to grok \score.

2004-04-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/stencil.cc (expr): Rename (was: get_expr).  Update callers.

	* lily/paper-book.cc (pages): Change signature.  Update callers.

	* lily/include/page.hh:
	* lily/page.cc: New file.

	* lily/paper-line.cc (to_stencil): New method.
	
	* lily/paper-outputter.cc (output_stencil): New method.

	* lily/paper-outputter.cc (output_line): Use them.

	* lily/warn.cc: Remove.

	* lily/my-lily-parser.cc (distill_inname): Remove.

	* flower/include/file-name.hh: 
	* flower/file-name.cc: New file.  Update users.

	* flower/file-path.cc [CYGWIN]: Junk testing code.  Remove Path.
	(find): New method of same name.

	* lily/my-lily-parser.cc (ly:parse-file): Use it.

	* lily/scm-option.cc (ly:set-option, ly:get-option): Bugfix:
	constant error message.

2004-04-27  Heikki Junes <hjunes@cc.hut.fi>

	* input/test/{blank-notes.ly,staff-container.ly}: typos.

2004-04-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/music-glossary.tely: @table @strong' replaced
	by `@table @samp @c @strong'.  This fixes invalid makeinfo output
	(backportme).

2004-04-25  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/lily.scm (ly:load): Add ly-from-scheme.scm loading.

	* scm/ly-from-scheme.scm: New file. Introduce a new syntax:
	#{ lily music expression #} that returns an equivalent scheme
	music expression by parsing the string.

2004-04-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/my-lily-parser.cc:
	* lily/my-lily-lexer.cc: Another step towards parsing ly code from
	SCM string (foo.ly/toto.scm support).

2004-04-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/my-lily-parser.cc (ly:parser-parse-string): New function.

2004-04-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/newaddlyrics.ly: Remove lilypond-book kludge.
