@@ -1,5 +1,9 @@
 2004-04-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* input/test/markup-score.ly: New file.
+
+	* scm/define-markup-commands.scm (stencil): New markup.
+
 	* lily/book.cc (to_stencil): New method.
 
 	* lily/parser.yy (markup): Use it to grok \score.
